[package]
name = "yeet"
version = "0.1.0"
authors = ["Ethan Donowitz <ethowitz@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "3.0.1"

[[bin]]
name = "yeet"
path = "main.rs"

[profile.dev]
opt-level = 0  # Controls the --opt-level the compiler builds with
debug = true   # Controls whether the compiler passes `-g`
